<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="the_andela_learning_community_a_community_empowering_the_next_generation_of_african_technology_leaders_join_us">The Andela Learning community. A community Empowering the next generation of African technology leaders. Join Us !</string>
    <string name="ernest_oichie_aziegbemhin">Ernest Oichie Aziegbemhin</string>
    <string name="phone_2348028447953">Phone: +2348028447953</string>
    <string name="todo">TODO</string>
    <string name="email_ernestenaz_gmail_com">Email: Ernestenaz@gmail.com</string>
    <string name="track_android_developer">Track: Android Developer</string>
    <string name="slack_username_ernestenaz">Slack Username: @ernestenaz</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="slack_username_Ernest_Aziegbemhin">Ernest Aziegbemhin</string>
    <string name="name_ernest_oichie_aziegbemhin">name: ernest_oichie_aziegbemhin</string>
    <string name="Name_Ernest_Oichie_Aziegbemhin">Name_Ernest_Oichie_Aziegbemhin</string>
    <string name="Name_ernest_Oichie_Aziegbemhin">Name: Ernest Oichie Aziegbemhin</string>
</resources>
